logs/Slang/generated/hdlconv/hdlconvertor_p758.sv.log
name: hdlconvertor_p758
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p758.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p758.sv:8:12: error: unknown interface 'interface'
module M ( interface i);
           ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p758.sv:13:9: error: hierarchical names are not allowed in constant expressions
M u1 (i1.A);
      ~~^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p758.sv:14:9: error: hierarchical names are not allowed in constant expressions
M u2 (i1.B);
      ~~^
